add: :sparkles: add ES6 module import support

--- a/index.html
+++ b/index.html
@@ -10,6 +10,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
-<script src="src/sketch.js"></script>
+<script type="module" src="src/sketch.js"></script>
 </body>
 </html>
